objects/Tag_Template_Item__c/Tag_Template_Item__c.object-meta.xml
<CustomObject>
    <description>This object holds the tag template items.</description>
    <label>Tags Admin</label>
    <nameField>
        <label>Tag Line Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tags_Admin</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>