objects/Tag_Template_Item__c/fields/Air_Date__c.field-meta.xml
<CustomField>
    <fullName>Air_Date__c</fullName>
    <label>Air Date</label>
    <type>Date</type>
</CustomField>