objects/Tag_Template_Item__c/fields/Air_Time__c.field-meta.xml
<CustomField>
    <fullName>Air_Time__c</fullName>
    <label>Air Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>