objects/Tag_Template_Item__c/fields/Promo_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Promo_Due_Date__c</fullName>
    <label>Promo Due Date</label>
    <type>Date</type>
</CustomField>