objects/Tag_Template_Item__c/fields/Promo_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Promo_End_Date__c</fullName>
    <label>Promo End Date</label>
    <type>Date</type>
</CustomField>