objects/Tag_Template_Item__c/fields/Show_Air_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Air_Date__c</fullName>
    <label>Show Air Date</label>
    <type>Date</type>
</CustomField>